# ai-digest

./: .env.example  .gitignore  API.md  AUTHENTICATION.md  CONFIGURATION.md  CONTRIBUTING.md  DASHBOARD.md  DELIVERABLES.md  DEPLOYMENT.md  Dockerfile  GITHUB_PUSH.md  LOGGING.md  README.md  SCHEDULING.md  WEBHOOKS.md  ai-digest-scheduler.service  benchmark.py  demo.bat  demo.sh  docker-compose.override.yml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  run_docker_smoke.ps1  run_docker_smoke.sh
.github/workflows/: ci.yml
backend/: ai_digest.py  fetch_real_news.py  formatters.py  quick_digest.py  requirements.txt  scraper.py  scraper_output.txt  server.py  test_llama.py
backend/services/: delivery.py  metrics.py  webhooks.py
backend/src/: server.py
backend/tools/: adapters_placeholder.py
backend/workflows/: pipeline.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.css  Dashboard.tsx  Login.css  Login.tsx
frontend/src/services/: api.ts
frontend/src/utils/: auth.ts
grafana/provisioning/dashboards/: dashboard.yml
migrations/versions/: 001_initial_schema.py
prometheus/: alert_rules.yml
src/: __init__.py  logging_config.py  server.py  server_temp.txt
src/cli/: main.py
src/services/: auth.py  config.py  delivery.py  scheduler.py  storage.py
src/tools/: adapters_producthunt.py
static/: app.js  index.html  style.css
tests/: test_delivery.py  test_pipeline.py  test_pipeline_delivery.py
